--- a/au-input/src/app/app.component.html
+++ b/au-input/src/app/app.component.html
@@ -25,6 +25,30 @@
       <label>Normal Input:</label>
       <input class="normal-input" type="email" name="email" placeholder="E-mail">
   </div>
+  <div class="form-row">
+      <label>Email</label>
+      <au-fa-input icon="envelope">
+        <input class="normal-input" type="email" name="email" placeholder="Email">
+      </au-fa-input>
+  </div>
+  <div class="form-row">
+      <label>Password</label>
+      <au-fa-input icon="lock">
+        <input class="normal-input" type="text" name="password" placeholder="Password">
+      </au-fa-input>
+  </div>
+  <div class="form-row">
+      <label>Stripe</label>
+      <au-fa-input icon="cc-stripe">
+        <input class="normal-input" type="text" name="stripe" placeholder="Stripe">
+      </au-fa-input>
+  </div>
+  <div class="form-row">
+      <label>Paypal</label>
+      <au-fa-input icon="paypal">
+        <input class="normal-input" type="text" name="paypal" placeholder="Paypal">
+      </au-fa-input>
+  </div>
 
 </div>
 
