--- a/au-input/src/app/app.component.html
+++ b/au-input/src/app/app.component.html
@@ -27,11 +27,11 @@
   </div>
   <div class="form-row">
       <label>Email</label>
-      <au-fa-input icon="envelope">
-        <input class="normal-input" type="email" name="email" placeholder="Email">
+      <au-fa-input id="email-field" icon="envelope">
+        <input class="normal-input" type="email" name="email" placeholder="Email" class="test-class">
       </au-fa-input>
   </div>
-  <div class="form-row">
+  <div class="form-row au-fa-input-red-theme">
       <label>Password</label>
       <au-fa-input icon="lock">
         <input class="normal-input" type="text" name="password" placeholder="Password">
