au-tab-panel finished

--- a/au-tab-panel/src/app/au-tab-panel/au-tab-panel.component.scss
+++ b/au-tab-panel/src/app/au-tab-panel/au-tab-panel.component.scss
@@ -1,9 +1,9 @@
 
 
-@import "./theme";
+@import "../theme.scss";
 
 
-.tab-panel {
+:host {
 
   box-shadow: $box-shadow;
 
@@ -39,15 +39,6 @@
     }
 
   }
-
-  .tab {
-    border-left: $tab-border;
-    border-right: $tab-border;
-    border-bottom: $tab-border;
-    padding: 15px 25px;
-  }
-
-
 }
 
 
