--- a/au-tab-panel/src/app/app.component.html
+++ b/au-tab-panel/src/app/app.component.html
@@ -5,15 +5,14 @@
 
 <div class="container">
 
-    <div class="tab-panel">
+    <!-- <ng-template #headerButtons>
+        <button (click)="tabPanel.selectTab(loginTab)">Login</button>
+        <button (click)="tabPanel.selectTab(signUpTab)">Sign Up</button>
+    </ng-template> -->
 
-        <ul class="tab-panel-buttons">
-            <li class="selected">Login</li>
-            <li>Sign Up</li>
-            <li>Contact</li>
-        </ul>
+    <au-tab-panel #tabPanel [headerTemplate]="headerButtons" id="tabPanel">
 
-        <div class="tab">
+        <au-tab title="Log In" #loginTab>
             <form>
                 <div class="form-field">
                     <label>Email:</label><input>
@@ -22,9 +21,9 @@
                     <label>Password:</label><input>
                 </div>
             </form>
-        </div>
+        </au-tab>
 
-        <div class="tab">
+        <au-tab title="Sign Up" #signUpTab>
             <form>
                 <div class="form-field">
                     <label>Email:</label><input>
@@ -36,9 +35,9 @@
                     <label>Confirm Password:</label><input>
                 </div>
             </form>
-        </div>
+        </au-tab>
 
-        <div class="tab">
+        <au-tab title="Contact" #contactTab>
             <form>
                 <div class="form-field">
                     <label>Email:</label><input>
@@ -48,10 +47,9 @@
                     <textarea></textarea>
                 </div>
             </form>
-        </div>
+        </au-tab>
 
-    </div>
-
+    </au-tab-panel>
 
 </div>
 
